# fairy-tales

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
fairy_tales/: parser.py  parser_tools.py  telebot.py
fairy_tales/telegram_bot/: bot.py  handlers.py  keyboards.py  telegram_tools.py
